--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Alura MIDI</title>
+    <title>E-DRUMS</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,23 +15,25 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilos.css">
 
+    <script src="main.js" defer></script>
+
 </head>
 <body>
 
-    <h1>Alura Midi</h1>
+    <h1>Emílio Drums</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom">Pom</button>
-        <button class="tecla tecla_clap">Clap</button>
-        <button class="tecla tecla_tim">Tim</button>
+        <button onclick="tocaSomPom()" class="tecla tecla_pom">Pom</button>
+        <button onclick="tocaSomClap()" class="tecla tecla_clap">Clap</button>
+        <button onclick="tocaSomTim()" class="tecla tecla_tim">Tim</button>
 
-        <button class="tecla tecla_puff">Puff</button>
-        <button class="tecla tecla_splash">Splash</button>
-        <button class="tecla tecla_toim">Toim</button>
+        <button onclick="tocaSomPuff()" class="tecla tecla_puff">Puff</button>
+        <button onclick="tocaSomSplash()" class="tecla tecla_splash">Splash</button>
+        <button onclick="tocaSomToim()" class="tecla tecla_toim">Toim</button>
 
-        <button class="tecla tecla_psh">Psh</button>
-        <button class="tecla tecla_tic">Tic</button>
-        <button class="tecla tecla_tom">Tom</button>
+        <button onclick="tocaSomPsh()" class="tecla tecla_psh">Psh</button>
+        <button onclick="tocaSomTic()" class="tecla tecla_tic">Tic</button>
+        <button onclick="tocaSomTom()" class="tecla tecla_tom">Tom</button>
     </section>
 
     <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
@@ -44,5 +46,6 @@
     <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
     <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
 
+    <footer>Desenvolvido por <a href="https://github.com/emiliosarges">Emílo</a></footer>
 </body>
 </html>
